--- a/configs/Base-CenterNet.yaml
+++ b/configs/Base-CenterNet.yaml
@@ -1,14 +1,12 @@
 MODEL:
   META_ARCHITECTURE: "CenterNet"
   BACKBONE:
-    NAME: "build_retinanet_resnet_fpn_backbone"
+    NAME: "build_resnet_fpn_backbone"
   RESNETS:
     OUT_FEATURES: ["res3", "res4", "res5"]
-  ANCHOR_GENERATOR:
-    SIZES: !!python/object/apply:eval ["[[x, x * 2**(1.0/3), x * 2**(2.0/3) ] for x in [32, 64, 128, 256, 512 ]]"]
   FPN:
     IN_FEATURES: ["res3", "res4", "res5"]
-  RETINANET:
+  CENTERNET:
     IOU_THRESHOLDS: [0.4, 0.5]
     IOU_LABELS: [0, -1, 1]
 DATASETS:
