--- a/configs/Base-CenterNet.yaml
+++ b/configs/Base-CenterNet.yaml
@@ -1,13 +1,13 @@
 MODEL:
   META_ARCHITECTURE: "CenterNet"
   BACKBONE:
-    NAME: "build_resnet_backbone"
+    NAME: "build_torch_backbone"
   RESNETS:
     OUT_FEATURES: ["res3", "res4", "res5"]
   FPN:
     IN_FEATURES: ["res3", "res4", "res5"]
   CENTERNET:
-    DECONV_CHANNEL: [2048, 256, 128, 64]
+    DECONV_CHANNEL: [512, 256, 128, 64]
     DECONV_KERNEL: [4, 4, 4]
     NUM_CLASSES: 80
     MODULATE_DEFORM: True
@@ -19,8 +19,8 @@ DATASETS:
   TRAIN: ("coco_2017_train",)
   TEST: ("coco_2017_val",)
 SOLVER:
-  IMS_PER_BATCH: 32
-  BASE_LR: 0.02  # Note that RetinaNet uses a different default learning rate
+  IMS_PER_BATCH: 128
+  BASE_LR: 0.02 # Note that RetinaNet uses a different default learning rate
   STEPS: (30000, 40000)
   MAX_ITER: 45000
 INPUT:
