--- a/configs/centernet_r_18_C4_1x.yaml
+++ b/configs/centernet_r_18_C4_1x.yaml
@@ -10,8 +10,8 @@ MODEL:
     DEPTH: 18
     OUT_FEATURES: ["res3", "res4", "res5"]
   WEIGHTS: ""
-  PIXEL_MEAN: [0.485, 0.456, 0.406]
-  PIXEL_STD: [0.229, 0.224, 0.225]
+  # PIXEL_MEAN: [0.485, 0.456, 0.406]
+  # PIXEL_STD: [0.229, 0.224, 0.225]
 
   CENTERNET:
     DECONV_CHANNEL: [512, 256, 128, 64]
