add detectron2 backbone

--- a/configs/centernet_r_50_C4_1x.yaml
+++ b/configs/centernet_r_50_C4_1x.yaml
@@ -5,11 +5,11 @@ MODEL:
   
   META_ARCHITECTURE: "CenterNet"
   BACKBONE:
-    NAME: "build_torch_backbone"
+    NAME: "build_resnet_backbone"
   RESNETS:
     DEPTH: 50
-    OUT_FEATURES: ["res3", "res4", "res5"]
-  WEIGHTS: ""
+    OUT_FEATURES: ["res5"]
+  WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
   # PIXEL_MEAN: [0.485, 0.456, 0.406]
   # PIXEL_STD: [0.229, 0.224, 0.225]
 
@@ -26,3 +26,6 @@ MODEL:
 SOLVER:
   STEPS: (81000, 108000)
   MAX_ITER: 126000
+
+INPUT:
+  FORMAT: 'BGR'
