use torch backbone

--- a/configs/centernet_r_50_C4_1x.yaml
+++ b/configs/centernet_r_50_C4_1x.yaml
@@ -5,13 +5,13 @@ MODEL:
   
   META_ARCHITECTURE: "CenterNet"
   BACKBONE:
-    NAME: "build_resnet_backbone"
+    NAME: "build_torch_backbone"
   RESNETS:
     DEPTH: 50
     OUT_FEATURES: ["res5"]
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
-  # PIXEL_MEAN: [0.485, 0.456, 0.406]
-  # PIXEL_STD: [0.229, 0.224, 0.225]
+  PIXEL_MEAN: [0.485, 0.456, 0.406]
+  PIXEL_STD: [0.229, 0.224, 0.225]
 
   CENTERNET:
     DECONV_CHANNEL: [2048, 256, 128, 64]
@@ -28,4 +28,4 @@ SOLVER:
   MAX_ITER: 126000
 
 INPUT:
-  FORMAT: 'BGR'
+  FORMAT: 'RGB'
